<resources>
    <string name="app_name">Travel Journal</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City break</string>
    <string name="see_side">Seaside</string>
    <string name="mountains">Mountains</string>
    <string name="price_eur">Price(EUR)</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="rating">Rating</string>
    <string name="data_format">DD/MM/YYYY</string>
    <string name="save">save</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="take_picture">Take Picture</string>
    <string name="select">select</string>
    <string name="title_activity_navigation_drawer">Travel Journal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mihai Constantin</string>
    <string name="nav_header_subtitle">mihai.constantin98@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="long_click">Long Click</string>
    <string name="single_click">Single click</string>
    <string name="sing_in">sign in</string>
    <string name="default_web_client_id2">831253875718-qeedepe4p4s6socpreal7292butpvri3.apps.googleusercontent.com</string>
    <string name="image_item">Click on bookmark</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="log_out">Log Out</string>
</resources>
